--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div id="main" style="width: 100%; height: 100vh;"></div>
     <script>
     // 替換為你的 Google Apps Script 網址
-    const GOOGLE_SCRIPT_URL = 'YOUR_GOOGLE_APPS_SCRIPT_URL';
+    const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbw-SSHDSGrmCV_ywvlXgrZelswb3mI80MNiddDAaibJ4qKfLPoTQ8BmPcXU9xhvyTrC/exec';
     
     // 全域變數
     let chartDom, myChart, option, optionXyMap01;
